objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>ODP</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Advising</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Duplicate%2FCancelled</fullName>
        </values>
        <values>
            <fullName>Executing</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Propose</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Tech-Zone</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Dead - Lost</fullName>
        </values>
        <values>
            <fullName>Dead - Never Materialized</fullName>
        </values>
        <values>
            <fullName>Discovery%2FNeeds Analysis</fullName>
        </values>
        <values>
            <fullName>Probable%2FPossible</fullName>
        </values>
        <values>
            <fullName>Proposal%2FSOW%2FQuote Delivered</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Verbal Commitment</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Extension_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Extension Name</label>
        <referenceTo>Account_Extension__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Extension_Related_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Extension Related Site</label>
        <referenceTo>Account_Extension__c</referenceTo>
        <relationshipLabel>Opportunities (Account Extension Related Site)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Implemented__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Implemented</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Partner Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Org__c</fullName>
        <formula>Account.Org__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.Owner.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Profile</label>
        <referenceTo>Account_Profile__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>CASESAFEID(Account.RecordTypeId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Setup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT(Account.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Related_Site__r.Address1__c + &quot; &quot; +  Related_Site__r.Address2__c + &quot; &quot; +  Related_Site__r.City__c + &quot; &quot; + Text( Related_Site__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(  IsClosed  = TRUE, CloseDate , TODAY()) -  DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agree_Upon_Next_Steps1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agree Upon Next Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agree_Upon_Next_Steps2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agree Upon Next Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agree_Upon_Next_Steps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agree Upon Next Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agree_Upon_Transition_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agree Upon Transition Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alibaba_Prospect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alibaba Prospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_CAD__c</fullName>
        <description>For Canadian</description>
        <inlineHelpText>Amount Expected each year from the Potential Opportunity</inlineHelpText>
        <label>Opportunity Amount (CAD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Forecast_CAD__c</fullName>
        <formula>Amount_CAD__c*Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Forecast (CAD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Forecast__c</fullName>
        <formula>Amount*Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Analyze_info_for_Proposal_Dev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Analyze info for Proposal Dev.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Opportunity__c</fullName>
        <description>Forecasted annual opportunity amount in thousand</description>
        <formula>Amount  / 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Opportunity (&apos;000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Recurring_Amount__c</fullName>
        <formula>Monthly_Recurring_Amount__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Recurring Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anticipated_Revenue_Date__c</fullName>
        <label>Anticipated Revenue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appointment_opp_amt__c</fullName>
        <formula>IF( Appointments_cnt__c = 1, Amount, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appointments_cnt__c</fullName>
        <formula>IF(NOT(ISPICKVAL(StageName, &apos;0%-Duplicate/Cancelled&apos;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_by_Leadership__c</fullName>
        <description>Support
01402937</description>
        <inlineHelpText>Indicates when leadership has approved for sharing opportunity with CompuCom</inlineHelpText>
        <label>Approved by Leadership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ask_for_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask for Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ask_how_they_will_make_decision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask how they will make decision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Avendra_Forecast_Amt__c</fullName>
        <description>Used for Avendra CBFS</description>
        <label>Avendra Forecast Amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Award_Type__c</fullName>
        <description>To identify if a full or split award is given</description>
        <label>Award Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Award</fullName>
                    <default>true</default>
                    <label>Full Award</label>
                </value>
                <value>
                    <fullName>Multi-Vendor/Split Award</fullName>
                </value>
                <value>
                    <fullName>Hunting License</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used by Tech-Zone to track the BDR who worked the lead generating this opportunity.</description>
        <label>BDR</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.CompuCom_BDR__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>BDR_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BOT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Back_End_Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Per support 02320418, a field the Tech team asked to indicate  a rebate that we would provide the customer.</description>
        <label>Back-End Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bid_Presented_Date__c</fullName>
        <label>Bid Presented Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bookings_Date__c</fullName>
        <description>Requested by Workspace Interiors team to capture Opportunity bookings date.</description>
        <label>Bookings Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Build_Implementation_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Build Implementation Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Lead_ID__c</fullName>
        <label>CC Lead ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Call_for_appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call for appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to track  Salesprism opportunity disposition plays</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date_Time__c</fullName>
        <formula>DATETIMEVALUE ( Cancellation_Date__c ) + (9/24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancellation Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Financial Trouble</fullName>
                </value>
                <value>
                    <fullName>Hired In-House</fullName>
                </value>
                <value>
                    <fullName>No Value</fullName>
                </value>
                <value>
                    <fullName>Poor Service</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Account Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Partner Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date_Time__c</fullName>
        <formula>DATETIMEVALUE (CloseDate) + (9/24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Close_Reason_Comments__c</fullName>
        <description>* If Close Reason is Other or Walkaway, Close Reason Comments is required
* Close Reason Comments are available for all other close reasons, but not required</description>
        <inlineHelpText>If the Close Reason is Other or Walkaway, Close Reason Comments is required</inlineHelpText>
        <label>Close Reason Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Close_Reason__c</fullName>
        <label>Close Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Capabilities</fullName>
                </value>
                <value>
                    <fullName>Delayed/Cancelled</fullName>
                </value>
                <value>
                    <fullName>Fodder</fullName>
                </value>
                <value>
                    <fullName>Green Solution</fullName>
                </value>
                <value>
                    <fullName>Insufficient Decision Maker Level</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Overall Program</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Strategy</fullName>
                </value>
                <value>
                    <fullName>90 Day Expired Proposal</fullName>
                </value>
                <value>
                    <fullName>Walkaway</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close__c</fullName>
        <description>Only count the numbers of opportunities either closed at 100%-Won or 0%-Lost.</description>
        <formula>IF((ISPICKVAL(StageName, &quot;100%-Won&quot;) || ISPICKVAL(StageName, &quot;0%-Lost&quot;)), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close #</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coaching__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship</description>
        <inlineHelpText>If an ESDM or MSDM is involved in this opportunity, please select the ESDM or MSDM name; otherwise enter the opportunity owner name.</inlineHelpText>
        <label>Coaching</label>
        <referenceTo>Coaching__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Committed_Forecast_CAD__c</fullName>
        <description>For Canadian Currency</description>
        <label>Committed Forecast (CAD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Committed_Forecast__c</fullName>
        <inlineHelpText>This field is for larger opportunities. Enter the amount you expect to pull in for the current month. This will be reflected in your managers pipeline report</inlineHelpText>
        <label>Committed Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CompuCom_Lead_Above_Funnel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not a current Opportunity, but will be nurtured</inlineHelpText>
        <label>CompuCom Lead - Above Funnel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompuCom_Opportunity_Owner__c</fullName>
        <description>01444383</description>
        <label>CompuCom Opportunity Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompuCom_Perks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer is enrolled in the CompuCom Perks program</description>
        <label>CompuCom Perks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompuCom_Q__c</fullName>
        <inlineHelpText>Q or R # received from CompuCom</inlineHelpText>
        <label>CompuCom Q/R #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompuCom_Referral_Notes__c</fullName>
        <inlineHelpText>Notes received from CompuCom regarding this Opportunity</inlineHelpText>
        <label>CompuCom Referral Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conduct_First_Appt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conduct First Appt.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conduct_Opp_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conduct Opp Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conduct_Opp_Planning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conduct Opp Planning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conduct_subsequent_Appts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conduct subsequent Appts.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confidence_Level__c</fullName>
        <label>Confidence Level %</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Confirm_Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirm_Dialog__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm Dialog &amp; Agree on Next Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Converted_Lead_ID__c</fullName>
        <label>Converted Lead ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_RFP_w_OD_Differentiators__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create RFP w/ OD Differentiators</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Fiscal_Month__c</fullName>
        <label>Created Fiscal Month</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Hour__c</fullName>
        <formula>VALUE( MID( TEXT( CreatedDate- 0), 12, 2 ) )</formula>
        <label>Created Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_Minute__c</fullName>
        <formula>VALUE( MID( TEXT( CreatedDate- 0 ), 15, 2 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Minute</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Provider_Service_Details__c</fullName>
        <inlineHelpText>- Number of years with current supplier 
- Written agreement with current supplier (Y/N) 
- Written agreement term date</inlineHelpText>
        <label>Current Provider Service Details</label>
        <length>41000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Provider__c</fullName>
        <label>Current Provider</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Office Depot</fullName>
                </value>
                <value>
                    <fullName>Staples</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>Alpha I - Tier I</fullName>
                </value>
                <value>
                    <fullName>Alpha Office Supplies - Staples tier I</fullName>
                </value>
                <value>
                    <fullName>APD-Tier 1</fullName>
                </value>
                <value>
                    <fullName>Ascendent</fullName>
                </value>
                <value>
                    <fullName>Atos</fullName>
                </value>
                <value>
                    <fullName>Basically evergreen</fullName>
                </value>
                <value>
                    <fullName>Bulldog Office Supplies</fullName>
                </value>
                <value>
                    <fullName>Challenge Office Products</fullName>
                </value>
                <value>
                    <fullName>Cognizant</fullName>
                </value>
                <value>
                    <fullName>Complete Office</fullName>
                </value>
                <value>
                    <fullName>Concerto</fullName>
                </value>
                <value>
                    <fullName>Core Trust - CEXP</fullName>
                </value>
                <value>
                    <fullName>Corporate United</fullName>
                </value>
                <value>
                    <fullName>Corporate United/OMX</fullName>
                </value>
                <value>
                    <fullName>CSC</fullName>
                </value>
                <value>
                    <fullName>CXP</fullName>
                </value>
                <value>
                    <fullName>Dell Services</fullName>
                </value>
                <value>
                    <fullName>DSSI</fullName>
                </value>
                <value>
                    <fullName>EON</fullName>
                </value>
                <value>
                    <fullName>Fason, (legacey CorpEx) Staples Tier I</fullName>
                </value>
                <value>
                    <fullName>Fedex Kinko&apos;s</fullName>
                </value>
                <value>
                    <fullName>FM Resources</fullName>
                </value>
                <value>
                    <fullName>Genpact</fullName>
                </value>
                <value>
                    <fullName>Global RFP to sent out March 2009</fullName>
                </value>
                <value>
                    <fullName>Guernsey</fullName>
                </value>
                <value>
                    <fullName>Guy Brown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <formula>if( Account.AOPS_Cust_Id__c &lt;&gt; &quot;&quot; &amp;&amp; Account.Grandparent__c = &quot;No&quot;, Account.AOPS_Cust_Id__c, 
if( Account.AOPS_Cust_Id__c &lt;&gt; &quot;&quot; &amp;&amp; Account.Grandparent__c = &quot;Yes&quot;,LPAD(Account.AOPS_Cust_Id__c,8,&apos;0&apos;), 
if(Account.AOPS_Cust_Id__c = &quot;&quot;, &quot;Prospect&quot;, null 
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Lifecycle__c</fullName>
        <label>Opportunity Lifecycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Penetration</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Win Back</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Training_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Training Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <description>PPE-CBFS Personal protection equipment</description>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Essential Business</fullName>
                </value>
                <value>
                    <fullName>First Responders</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Staging_TableID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Staging TableID</label>
        <referenceTo>Data_Staging_Table__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Team_Inactive_Opportunity__c</fullName>
        <formula>if(or(ispickval(StageName,&quot;1%-Qualifying Prospect&quot;),ispickval(StageName,&quot;1%-Qualifying Prospect&quot;),ispickval(StageName,&quot;25%-Initial Approach&quot;),ispickval(StageName,&quot;50%-Presentation&quot;),ispickval(StageName,&quot;75%-Negotiate &amp; Finalize&quot;),ispickval(StageName,&quot;90%-Execute&quot;),ispickval(StageName,&quot;100%-Won&quot;),ispickval(StageName,&quot;0%-Lost&quot;),ispickval(StageName,&quot;0%-Walkaway&quot;),ispickval(StageName,&quot;0%-Duplicate/Cancelled&quot;),ispickval(StageName,&quot;&quot;)),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Team Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity__c</fullName>
        <formula>TODAY() -  LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Registration__c</fullName>
        <label>Deal Registration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I will register deal</fullName>
                </value>
                <value>
                    <fullName>I will need help to register deal</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decision_Date__c</fullName>
        <description>To track the date a decision will be made by the customer to purchase from OD.</description>
        <inlineHelpText>Date the RFP or decision is made</inlineHelpText>
        <label>Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Postponed_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Postponed (Closed)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Zip_code__c</fullName>
        <inlineHelpText>Only Input 5-Digit Zip Code</inlineHelpText>
        <label>Delivery Zip code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determine_Eval_Criteria_Next_Steps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Determine Eval Criteria/Next Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Determine_Value_Levers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Determine Value Levers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DevicesAnnuityPlacements__c</fullName>
        <label># Devices/Annuity Placements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diagnose_Admitted_Pain_Create_Vision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diagnose Admitted Pain/Create Vision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discover_whats_most_important__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discover Perceived Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distribution_Center__c</fullName>
        <inlineHelpText>Which DC will the product be delivered to</inlineHelpText>
        <label>Distribution Center</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>